--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "stylusdb-cli": "node ./src/cli.js"
   },
   "keywords": [],
-  "author": "Aadarsh Kumar Singh",
+  "author": "Chakshu Gautam",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0"
